# Deep-Symbolic-Networks

./: CMakeLists.txt  LICENSE  README.md  concept.md  dsn_config.h.in
experiments/: CMakeLists.txt
experiments/cv/mnist/: CMakeLists.txt  Mnist.py  loader.pyx  main.py  mnist.cpp  mnist.h  utils.cpp
